Brink v2.0.3 Dark Mode Fixes
• Fix various popups appearing light when using MAL dark mode.
Thanks to Lawliet529 for this fix!

---------

--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 2.0.2
+ * Version 2.0.3
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -2249,7 +2249,7 @@ span:nth-of-type(2)::after {
   !OVERLAYS
 \*------------------------------*/
 
-#fancybox-overlay {
+body.ownlist #fancybox-overlay {
 	background: #000 !important;
 	opacity: 0.78 !important;
 }
@@ -2287,12 +2287,20 @@ body #fancybox-close {
 	margin: 0;
 }
 
+.dark-mode #gdpr-modal-bottom .modal-wrapper {
+	filter: none;
+}
+
 #gdpr-modal-bottom .text {
 	width: 100%;
 }
 
 #gdpr-modal-bottom a {
 	color: #1d439b;
+}
+
+.dark-mode #gdpr-modal-bottom a {
+	color: #abc4ed;
 }
 
 
@@ -2359,7 +2367,7 @@ body #fancybox-inner {
 	border-radius: 4px;
 }
 
-body #fancybox-frame {
+html:not(.dark-mode) body #fancybox-frame {
 	filter:
 		sepia(20%)
 		invert(91.5%);
